# atelier

./: .gitignore  Makefile  Project.md  README.md
atelier_agent/: Makefile  Project.md  README.md  myNotes.md  pyproject.toml  requirements.txt
atelier_agent/agent/: brain.py  loop.py  memory.py  react.py
atelier_agent/atelier/: __init__.py  banner.py  cli.py  config.py
atelier_agent/data/eval_reports/: report_20260621T073958.json  report_20260621T123524.json  report_20260621T123758.json  report_20260621T164208.json  report_20260621T171954.json  report_20260621T173650.json  report_20260621T174453.json  report_20260622T005329.json  report_20260622T011056.json  route_eval.json
atelier_agent/data/traces/: 20260621T063822.json  20260621T073922.json  20260621T073958.json  20260621T123105.json  20260621T123357.json  20260621T123501.json  20260621T123524.json  (+76 more)
atelier_agent/docs/: ARCHITECTURE.md  EVAL.md  TESTING.md  WRITEUP.md
atelier_agent/eval/: __init__.py  metrics.py  plots.py  run_eval.py
atelier_agent/rag/: __init__.py  answer.py  chunk.py  embed.py  ingest.py  lexical.py  store.py
atelier_agent/sample_task/: test_mathutils.py
atelier_agent/scripts/: reproduce.sh
atelier_agent/tests/: test_1.py  test_calculator.py  test_chunk.py  test_eval.py  test_eval_plots.py  test_files.py  test_memory.py  test_planner_dataset.py  test_react.py  test_registry.py  test_store.py  test_tools_build.py
atelier_agent/tools/: ast_edit.py  base.py  calculator.py  code_exec.py  knowledge.py  memory_tools.py  registry.py  repo_map.py  search.py  shell.py  test_runner.py
(+103 files in other folders)
