[project]
name = "atelier"
version = "0.1.0"
description = "A fully local, zero-cost, dual-mode (knowledge + build) AI agent for a single MacBook."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Monit" }]

# Pinned, reproducible runtime deps live in requirements.txt (uv pip install -r).
# The list here is the human-readable top-level surface; the lockfile is the source of truth.
dependencies = [
    "mlx",
    "mlx-lm",
    "ollama>=0.6",
    "pydantic>=2.10",
    "pydantic-settings>=2.10",
    "jinja2>=3.1",
    "numpy>=2",
    "pymupdf>=1.27",
    "pypdf>=6",
    "sentence-transformers>=5",
    "torch>=2.6",
    "scikit-learn>=1.6",
    "chromadb>=1.5",
    "mcp>=1.20",
    "httpx>=0.28",
    "beautifulsoup4>=4.13",
    "typer>=0.15",
    "rich>=14",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.9"]

[project.scripts]
atelier = "atelier.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atelier", "agent", "tools", "rag", "eval"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
